# prediction-market-model-benchmark

./: .gitignore  README.md  model_roster.json  pyproject.toml
.github/workflows/: ci-audit.yml
docs/: methodology.md  research-notes.md
examples/: responses.seed.jsonl
schemas/: result.schema.json  task.schema.json
src/sf_pm_benchmark/: __init__.py  runner.py  scoring.py
tasks/: prediction_market_seed.jsonl
tests/: test_scoring.py
